# racecar_ir_tag_detector

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
src/ir_tag_detector/: image_collector.py  ir_tag_detector.py  ir_tag_detector_base.py  ir_tag_detector_cnn.py  ir_tag_detector_filter.py
src/ir_tag_detector/utils/: tf_utils.py
